--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -106,7 +106,7 @@
     "reviewFilter": ["최신순", "추천순"]
   },
   "ReviewCard": {
-    "modify": "수정",
+    "edit": "수정",
     "delete": "삭제",
     "weather": "날씨",
     "days": "날짜",
@@ -139,7 +139,13 @@
     "reviewPlaceholder": "최소 15자 이상 써주세요",
     "minText": "최소 15자",
     "uploadPhoto": "📷 사진을 올려주세요 (선택)",
-    "EditOrRegister": ["리뷰 수정하기", "리뷰 등록하기"]
+    "EditOrRegister": ["리뷰 수정하기", "리뷰 등록하기"],
+    "Modal": {
+      "minReview": "리뷰는 최소 15자 이상으로 적어주세요",
+      "minPhoto": "이미지는 최대 3개까지 등록 가능합니다.",
+      "errorPhoto": "이미지를 읽어들이는데 오류가 발생했습니다.",
+      "msg": "리뷰가 등록되었습니다."
+    }
   },
   "Pick": {
     "headerSubTitle": "나만의 장소 Pick",
@@ -206,7 +212,18 @@
     ],
     "Modal": {
       "service": "서비스 준비중입니다.",
-      "goLogin": "로그인이 필요한 서비스입니다."
+      "goLogin": "로그인이 필요한 서비스입니다.",
+      "complete": "회원정보가 수정되었습니다."
     }
+  },
+  "Navbar": {
+    "login": "로그인을 해야 이용할 수 있는 서비스입니다. 로그인 하시겠습니까?"
+  },
+  "CommonModal": {
+    "agree": "확인",
+    "disagree": "취소",
+    "edit": "수정",
+    "delete": "삭제",
+    "singo": "신고하기"
   }
 }
