--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -217,7 +217,7 @@
     }
   },
   "Navbar": {
-    "login": "로그인을 해야 이용할 수 있는 서비스입니다. 로그인 하시겠습니까?"
+    "login": "로그인을 해야 이용할 수 있는 서비스입니다.\n로그인 하시겠습니까?"
   },
   "CommonModal": {
     "agree": "확인",
