[feature] : 의견보내기 모달 다국어 추가

--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -176,7 +176,8 @@
     "Modal": {
       "service": "I will be Back",
       "goLogin": "Could you Login?"
-    }
+    },
+    "KakaoBank": "Kakaobank"
   },
   "MyPageEdit": {
     "headerSubTitle": "Edit Profile",
@@ -222,7 +223,25 @@
   },
   "CommonModal": {
     "agree": "OK",
-    "disagree": "CANCEL"
+    "disagree": "CANCEL",
+    "edit": "Edit",
+    "delete": "Delete",
+    "singo": "Report",
+    "ReviewSetting": "Review Setting",
+    "ReviewReport": "Report",
+    "feedback": {
+      "headerSubTitle": "FeedBack",
+      "content": "Send us FeedBack for development",
+      "phoneNumber": "Phone",
+      "gift": "We'll send you Gifticons through a Raffle",
+      "writePhone": "Please fill Phone Number",
+      "placeholder": "Please Send what you want!",
+      "submit": "FeedBack",
+      "error": [
+        "Please fill Review at least letters",
+        "Please fill all form!, then send you Grifticons through a Raffle"
+      ]
+    }
   },
   "WeatherDetail": {
     "weatherCondition": {
