[bug] : 다국어 부족한 부분 추가

--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -166,7 +166,10 @@
   "Setting": {
     "headerSubTitle": "Setting",
     "logOut": "Logout",
-    "withdrawal": "Withdrawal"
+    "withdrawal": "Withdrawal",
+    "logOutMessage": "Logout Success!",
+    "withdrawalMessage": "Do you really want to withdraw",
+    "withdrwalContent": "permanently withdrawn?"
   },
   "MyPage": {
     "UpdateIssue": "Update Issue",
