--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -167,7 +167,10 @@
   "Setting": {
     "headerSubTitle": "설정",
     "logOut": "로그아웃",
-    "withdrawal": "회원탈퇴"
+    "withdrawal": "회원탈퇴",
+    "logOutMessage": "로그아웃 되었습니다.",
+    "withdrawalMessage": "회원 탈퇴 하시겠습니까?",
+    "withdrwalContent": "탈퇴된 회원은 영구적으로 탈퇴됩니다."
   },
   "MyPage": {
     "UpdateIssue": "공지사항",
@@ -242,7 +245,8 @@
         "리뷰는 최소 15자 이상 등록해주세요",
         "정보를 모두 입력해주세요. 추첨을 통해 기프티콘을 보내드립니다"
       ]
-    }
+    },
+    "critical": {}
   },
   "WeatherDetail": {
     "weatherCondition": {
