[feat] 카테고리 선택 기능 추가

--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -256,5 +256,36 @@
     },
     "humidity": "humidity",
     "particulateMatter": "PM"
+  },
+  "guList": {
+    "nowLoaction": "Current location (Currently only available in Seoul)",
+    "all": "All of Seoul" ,
+    "gangnam": "Gangnam-gu" ,
+    "gangdong": "Gangdong-gu" ,
+    "gangbuk": "Gangbuk-gu" ,
+    "gangseo": "Gangseo-gu" ,
+    "gwanak": "Gwanak-gu" ,
+    "gwangjin": "Gwangjin-gu" ,
+    "guro": "Guro-gu" ,
+    "geumcheon": "Geumcheon-gu" ,
+    "nowon": "Nowon-gu" ,
+    "dobong": "Dobong-gu" ,
+    "dongdaemun": "Dongdaemun-gu" ,
+    "dongjak": "Dongjak-gu" ,
+    "mapo": "Mapo-gu" ,
+    "seodaemun": "Seodaemun-gu" ,
+    "seocho": "Seocho-gu" ,
+    "seongdong": "Seongdong-gu" ,
+    "seongbuk": "Seongbuk-gu" ,
+    "songpa": "Songpa-gu" ,
+    "yangcheon": "Yangcheon-gu" ,
+    "yeongdeungpo": "Yeongdeungpo-gu" ,
+    "yongsan": "Yongsan-gu" ,
+    "eunpyeong": "Eunpyeong-gu" ,
+    "jongno": "Jongno-gu" ,
+    "junggu": "Jung-gu" ,
+    "jungnang": "Jungnang-gu",
+    "selectArea": "Region selection",
+    "pleaseSelectArea": "Please select a region"
   }
 }
