--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -258,5 +258,36 @@
     },
     "humidity": "습도",
     "particulateMatter": "초미세먼지"
+  },
+  "guList": {
+    "nowLoaction": "현재위치 (현재는 서울만 가능합니다)",
+    "all": "서울전체" ,
+    "gangnam": "강남구" ,
+    "gangdong": "강동구" ,
+    "gangbuk": "강북구" ,
+    "gangseo": "강서구" ,
+    "gwanak": "관악구" ,
+    "gwangjin": "광진구" ,
+    "guro": "구로구" ,
+    "geumcheon": "금천구" ,
+    "nowon": "노원구" ,
+    "dobong": "도봉구" ,
+    "dongdaemun": "동대문구" ,
+    "dongjak": "동작구" ,
+    "mapo": "마포구" ,
+    "seodaemun": "서대문구" ,
+    "seocho": "서초구" ,
+    "seongdong": "성동구" ,
+    "seongbuk": "성북구" ,
+    "songpa": "송파구" ,
+    "yangcheon": "양천구" ,
+    "yeongdeungpo": "영등포구" ,
+    "yongsan": "용산구" ,
+    "eunpyeong": "은평구" ,
+    "jongno": "종로구" ,
+    "junggu": "중구" ,
+    "jungnang": "중랑구",
+    "selectArea": "지역선택",
+    "pleaseSelectArea": "지역을 선택해주세요."
   }
 }
