[fix] 현재위치 미허용시 에러 수정

--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -23,7 +23,8 @@
     },
     "returnText": ["One", "Two", "Less than Four", "More than Four"],
     "resultSentence": ["", "Place", "Want(s) to go"],
-    "alert": "Please Select all Types"
+    "alert": "Please Select all Types",
+    "pleaseCheckLocation": "Please allow access to your current location."
   },
   "loginPage": {
     "headerSubTitle": "Login",
