--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -5,7 +5,8 @@
     "recommend": "장소 추천 받기",
     "weatherPlace": "날씨에 따른 공간",
     "popularPlace": "좋아요를 많이 받은",
-    "adminPlace": "운영자 픽!"
+    "adminPlace": "운영자 픽!",
+    "hasNoLocation": "현재위치 정보 없음"
   },
   "weatherBox": {
     "degreeStatus": ["어제보다", "높아요", "낮아요", "어제와 온도가 같아요"]
