[fix] 다국어 수정

--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -92,7 +92,7 @@
       "실외검색 결과가 없습니다.",
       "실외에서 시원한 바람과 함께"
     ],
-    "inSideResult": ["실내검색 결과가 없습니다..", "실내에서 여유로운 시간을"]
+    "inSideResult": ["실내검색 결과가 없습니다.", "실내에서 여유로운 시간을"]
   },
   "placeList": {
     "headerSubTitle": "검색결과",
