[bug] : ko 유형 검색페이지 문구 수정

--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -25,7 +25,7 @@
       "selectTitle": "장소를 선택해주세요",
       "placeType": ["여행", "맛집", "카페", "예술", "액티비티"]
     },
-    "returnText": ["한명", "두명", "네명 미만", "네명 이상"],
+    "returnText": ["1명", "2명", "4명 미만", "4명 이상"],
     "resultSentence": ["이", "장소 을(를)", "가고 싶어요"],
     "alert": "유형을 모두 선택해주세요",
     "pleaseCheckLocation": "현재 위치 액세스를 허용해주세요."
@@ -83,7 +83,7 @@
   },
   "SelectedContents": {
     "memberCount1": ["2명", "4명 미만", "4명 이상"],
-    "memberCount2": ["한명", "두명", "네명 미만", "네명 이상"]
+    "memberCount2": ["1명", "2명", "4명 미만", "4명 이상"]
   },
 
   "selectTypeResultPage": {
@@ -263,31 +263,31 @@
   },
   "guList": {
     "nowLoaction": "현재위치 (현재는 서울만 가능합니다)",
-    "all": "서울전체" ,
-    "gangnam": "강남구" ,
-    "gangdong": "강동구" ,
-    "gangbuk": "강북구" ,
-    "gangseo": "강서구" ,
-    "gwanak": "관악구" ,
-    "gwangjin": "광진구" ,
-    "guro": "구로구" ,
-    "geumcheon": "금천구" ,
-    "nowon": "노원구" ,
-    "dobong": "도봉구" ,
-    "dongdaemun": "동대문구" ,
-    "dongjak": "동작구" ,
-    "mapo": "마포구" ,
-    "seodaemun": "서대문구" ,
-    "seocho": "서초구" ,
-    "seongdong": "성동구" ,
-    "seongbuk": "성북구" ,
-    "songpa": "송파구" ,
-    "yangcheon": "양천구" ,
-    "yeongdeungpo": "영등포구" ,
-    "yongsan": "용산구" ,
-    "eunpyeong": "은평구" ,
-    "jongno": "종로구" ,
-    "junggu": "중구" ,
+    "all": "서울전체",
+    "gangnam": "강남구",
+    "gangdong": "강동구",
+    "gangbuk": "강북구",
+    "gangseo": "강서구",
+    "gwanak": "관악구",
+    "gwangjin": "광진구",
+    "guro": "구로구",
+    "geumcheon": "금천구",
+    "nowon": "노원구",
+    "dobong": "도봉구",
+    "dongdaemun": "동대문구",
+    "dongjak": "동작구",
+    "mapo": "마포구",
+    "seodaemun": "서대문구",
+    "seocho": "서초구",
+    "seongdong": "성동구",
+    "seongbuk": "성북구",
+    "songpa": "송파구",
+    "yangcheon": "양천구",
+    "yeongdeungpo": "영등포구",
+    "yongsan": "용산구",
+    "eunpyeong": "은평구",
+    "jongno": "종로구",
+    "junggu": "중구",
     "jungnang": "중랑구",
     "selectArea": "지역선택",
     "pleaseSelectArea": "지역을 선택해주세요."
