[style] : 여행-> 명소 로 변경

--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -23,7 +23,7 @@
     },
     "selectPlace": {
       "selectTitle": "장소를 선택해주세요",
-      "placeType": ["여행", "맛집", "카페", "예술", "액티비티"]
+      "placeType": ["명소", "맛집", "카페", "예술", "액티비티"]
     },
     "returnText": ["1명", "2명", "4명 미만", "4명 이상"],
     "resultSentence": ["이", "장소 을(를)", "가고 싶어요"],
