--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -20,7 +20,7 @@
     },
     "selectPlace": {
       "selectTitle": "Choose place you Wanted",
-      "placeType": ["Tour", "Tasty room", "Cafe", "Arts", "Activity"]
+      "placeType": ["Sights", "Tasty room", "Cafe", "Arts", "Activity"]
     },
     "returnText": ["One", "Two", "Less than Four", "More than Four"],
     "resultSentence": ["", "Place", "Want(s) to go"],
@@ -261,31 +261,31 @@
   },
   "guList": {
     "nowLoaction": "Current location (Currently only available in Seoul)",
-    "all": "All of Seoul" ,
-    "gangnam": "Gangnam-gu" ,
-    "gangdong": "Gangdong-gu" ,
-    "gangbuk": "Gangbuk-gu" ,
-    "gangseo": "Gangseo-gu" ,
-    "gwanak": "Gwanak-gu" ,
-    "gwangjin": "Gwangjin-gu" ,
-    "guro": "Guro-gu" ,
-    "geumcheon": "Geumcheon-gu" ,
-    "nowon": "Nowon-gu" ,
-    "dobong": "Dobong-gu" ,
-    "dongdaemun": "Dongdaemun-gu" ,
-    "dongjak": "Dongjak-gu" ,
-    "mapo": "Mapo-gu" ,
-    "seodaemun": "Seodaemun-gu" ,
-    "seocho": "Seocho-gu" ,
-    "seongdong": "Seongdong-gu" ,
-    "seongbuk": "Seongbuk-gu" ,
-    "songpa": "Songpa-gu" ,
-    "yangcheon": "Yangcheon-gu" ,
-    "yeongdeungpo": "Yeongdeungpo-gu" ,
-    "yongsan": "Yongsan-gu" ,
-    "eunpyeong": "Eunpyeong-gu" ,
-    "jongno": "Jongno-gu" ,
-    "junggu": "Jung-gu" ,
+    "all": "All of Seoul",
+    "gangnam": "Gangnam-gu",
+    "gangdong": "Gangdong-gu",
+    "gangbuk": "Gangbuk-gu",
+    "gangseo": "Gangseo-gu",
+    "gwanak": "Gwanak-gu",
+    "gwangjin": "Gwangjin-gu",
+    "guro": "Guro-gu",
+    "geumcheon": "Geumcheon-gu",
+    "nowon": "Nowon-gu",
+    "dobong": "Dobong-gu",
+    "dongdaemun": "Dongdaemun-gu",
+    "dongjak": "Dongjak-gu",
+    "mapo": "Mapo-gu",
+    "seodaemun": "Seodaemun-gu",
+    "seocho": "Seocho-gu",
+    "seongdong": "Seongdong-gu",
+    "seongbuk": "Seongbuk-gu",
+    "songpa": "Songpa-gu",
+    "yangcheon": "Yangcheon-gu",
+    "yeongdeungpo": "Yeongdeungpo-gu",
+    "yongsan": "Yongsan-gu",
+    "eunpyeong": "Eunpyeong-gu",
+    "jongno": "Jongno-gu",
+    "junggu": "Jung-gu",
     "jungnang": "Jungnang-gu",
     "selectArea": "Region selection",
     "pleaseSelectArea": "Please select a region"
