--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -291,7 +291,7 @@
     "pleaseSelectArea": "Please select a region"
   },
   "Banner": {
-    "BannerSentence": "If you write feedback, ",
+    "BannerSentence": "If you leave your opinion, Starbucks ",
     "Americano": "Americano"
   }
 }
