--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -293,7 +293,7 @@
     "pleaseSelectArea": "지역을 선택해주세요."
   },
   "Banner": {
-    "BannerSentence": "한줄 후기 작성하면 스타벅스 ",
+    "BannerSentence": "서비스 사용 후 의견을 남겨주시면 스타벅스 ",
     "Americano": "아메리카노"
   }
 }
