[feature] : 날씨에 따른 문구 + 다국어 적용

--- a/src/lang/lang.en.json
+++ b/src/lang/lang.en.json
@@ -6,10 +6,12 @@
     "popularPlace": "Most Recommended",
     "adminPlace": "Admin's Pick",
     "hasNoLocation": "No current location information",
-    "weatherInfo": ["A space suitable for a sunny day",  
+    "weatherInfo": [
+      "A space suitable for a sunny day",
       "A place suitable for a rainy day",
-      "A place suitable for a snowy day", 
-      "A place suitable for a cloudy day"]
+      "A place suitable for a snowy day",
+      "A place suitable for a cloudy day"
+    ]
   },
   "selectTypePage": {
     "headerSubTitle": "Select type",
@@ -296,5 +298,14 @@
   "Banner": {
     "BannerSentence": "If you leave your opinion, Starbucks ",
     "Americano": "Americano"
+  },
+  "WeatherBox": {
+    "sunny": ["How about hang around Seoul", "on sunny day?"],
+    "rainy": ["How about hang around", "umbrella on rainy day?"],
+    "cloudy": ["cup of coffee in a cozy cafe", "on cloudy day"],
+    "snow": [
+      "On a snowy day, climb to a high place",
+      "look down on the snowy view of Seoul "
+    ]
   }
 }
