--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -6,11 +6,12 @@
     "popularPlace": "인플러들에게 선택받은 공간",
     "adminPlace": "MD's PICK",
     "hasNoLocation": "현재위치 정보 없음",
-    "weatherInfo": ["맑은 날에 어울리는 공간",  
+    "weatherInfo": [
+      "맑은 날에 어울리는 공간",
       "비 오는 날에 어울리는 공간",
-      "눈 오는 날에 어울리는 공간", 
-      "흐린 날에 어울리는 공간"]
-    
+      "눈 오는 날에 어울리는 공간",
+      "흐린 날에 어울리는 공간"
+    ]
   },
   "weatherBox": {
     "degreeStatus": ["어제보다", "높아요", "낮아요", "어제와 온도가 같아요"]
@@ -299,5 +300,14 @@
   "Banner": {
     "BannerSentence": "서비스 사용 후 의견을 남겨주시면 스타벅스 ",
     "Americano": "아메리카노"
+  },
+  "WeatherBox": {
+    "sunny": ["화창한 날 서울 이곳 저곳", "다녀보는 건 어떠신가요?"],
+    "rainy": ["바 오는 날엔 우산을 쓰고", "거닐어 보는 건 어때요? "],
+    "cloudy": ["흐린 날엔 운치있는 카페에서", "커피한잔쓰! "],
+    "snow": [
+      "눈 오는 날에는 높은 곳에 올라가",
+      "눈 내린 서울 전경을 내려보아요. "
+    ]
   }
 }
