--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -303,11 +303,11 @@
   },
   "WeatherBox": {
     "sunny": ["화창한 날 서울 이곳 저곳", "다녀보는 건 어떠신가요?"],
-    "rainy": ["바 오는 날엔 우산을 쓰고", "거닐어 보는 건 어때요? "],
-    "cloudy": ["흐린 날엔 운치있는 카페에서", "커피한잔쓰! "],
+    "rainy": ["바 오는 날엔 우산을 쓰고", "거닐어 보는 건 어때요?"],
+    "cloudy": ["흐린 날엔 운치있는 카페에서", "커피한잔 !"],
     "snow": [
       "눈 오는 날에는 높은 곳에 올라가",
-      "눈 내린 서울 전경을 내려보아요. "
+      "눈 내린 서울 전경을 내려보아요."
     ]
   }
 }
