[style] 리뷰 신고하기 text로 변경

--- a/src/lang/lang.ko.json
+++ b/src/lang/lang.ko.json
@@ -152,7 +152,7 @@
     "Modal": {
       "minReview": "리뷰는 최소 5자 이상으로 적어주세요",
       "minPhoto": "이미지는 최대 3개까지 등록 가능합니다.",
-      "errorPhoto": "이미지를 읽어들이는데 오류가 발생했습니다.",
+      "errorPhoto": "이미지를 불러오는데 오류가 발생했습니다.",
       "msg": "리뷰가 등록되었습니다."
     }
   },
@@ -249,7 +249,7 @@
       "placeholder": "자유롭게 의견을 보내주세요",
       "submit": "의견보내기",
       "error": [
-        "리뷰는 최소 5자 이상 등록해주세요",
+        "신고 내용을 최소 15자 이상 등록해주세요",
         "정보를 모두 입력해주세요. 추첨을 통해 기프티콘을 보내드립니다"
       ]
     },
